[gd_scene load_steps=8 format=3 uid="uid://qyqvxcg44x64"]

[ext_resource type="Script" path="res://scripts/enemy/buff_unicorn_ai.gd" id="1_6cix8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="1_ug2mg"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="2_f8vwf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="3_brrrw"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_40dw5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_agbok"]
radius = 20.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1t62b"]
radius = 1.0

[node name="UniconBuffAI" type="Node3D" node_paths=PackedStringArray("state_chart", "player_detection_area", "player_attack_area")]
script = ExtResource("1_6cix8")
state_chart = NodePath("StateChart")
player_detection_area = NodePath("PlayerDetectionArea")
player_attack_area = NodePath("PlayerAttackArea")
attack_cooldown = 1.0
attack_damage = 10
charging_time = 1.0
charging_cooldown = 5.0
charging_damage = 25
charging_speed_modifier = 3.0

[node name="PlayerDetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
shape = SubResource("SphereShape3D_agbok")

[node name="PlayerAttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerAttackArea"]
shape = SubResource("CylinderShape3D_1t62b")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("1_ug2mg")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("2_f8vwf")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("3_brrrw")

[node name="PlayerInSight" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("5_40dw5")
to = NodePath("../../Attacking")
event = &"player_in_sight"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="StateChart/Root"]
script = ExtResource("2_f8vwf")
initial_state = NodePath("Charging")

[node name="Normal" type="Node" parent="StateChart/Root/Attacking"]
script = ExtResource("3_brrrw")

[node name="StartCharging" type="Node" parent="StateChart/Root/Attacking/Normal"]
script = ExtResource("5_40dw5")
to = NodePath("../../Charging")
event = &"start_charging"
delay_in_seconds = "0.0"

[node name="Charging" type="Node" parent="StateChart/Root/Attacking"]
script = ExtResource("3_brrrw")

[node name="StopCharging" type="Node" parent="StateChart/Root/Attacking/Charging"]
script = ExtResource("5_40dw5")
to = NodePath("../../Normal")
event = &"stop_charging"
delay_in_seconds = "0.0"

[connection signal="state_physics_processing" from="StateChart/Root/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Attacking" to="." method="_on_attacking_state_physics_processing"]
[connection signal="state_processing" from="StateChart/Root/Attacking" to="." method="_on_attacking_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Attacking/Normal" to="." method="_on_normal_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Attacking/Charging" to="." method="_on_charging_state_entered"]
